--- a/Roman Numeral Converter/index.html
+++ b/Roman Numeral Converter/index.html
@@ -7,12 +7,17 @@
   </head>
 
   <body>
-    <div class="container">
+    <main class="container">
       <h1>Roman Numeral Converter</h1>
-      <input id="number" type="number" min="1" placeholder="Enter a number" />
-      <button id="convert-btn">Convert</button>
-      <span id="output"></span>
-    </div>
+      <form id="form" class="form">
+        <fieldset>
+          <label for="number">Enter a Number:</label><br>
+          <input type="number" id="number" required="">
+          <button type="button" id="convert-btn">Convert</button>
+        </fieldset>
+      </form>
+      <div id="output" class="output" hidden></div>
+    </main>
     <script src="./script.js"></script>
   </body>
 </html>
