--- a/Palidrome Checker/index.html
+++ b/Palidrome Checker/index.html
@@ -4,13 +4,27 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./styles.css">
-    <title>Palidrome Checker</title>
+    <title>Palindrome Checker</title>
 </head>
 
 <body>
-    <input type="text" id="text-input"></input>
-    <button id="check-btn">check</button>
-    <p id="result"></p>
+    <main class="container">
+        <h1 class="title">Is it a Palindrome?</h1>
+        <div class="palindrome-div">
+          <label for="text-input">Enter in text to check for a palindrome:
+          </label>
+          <input class="palindrome-input" id="text-input" value="" type="text">
+          <button class="palindrome-btn" id="check-btn">Check</button>
+          <div class="results-div" id="result"></div>
+        </div>
+        <div class="palindrome-definition-div">
+          <p class="palindrome-definition">
+            A <dfn>palindrome</dfn> is a word or sentence that's spelled the same
+            way both forward and backward, ignoring punctuation, case, and
+            spacing.
+          </p>
+        </div>
+      </main>
     <script src="./script.js"></script>
 </body>
 
