index page added * Reorganized

--- a/certification-projects/roman-numeral-converter/index.html
+++ b/certification-projects/roman-numeral-converter/index.html
@@ -11,9 +11,9 @@
       <h1>Roman Numeral Converter</h1>
       <form id="form" class="form">
         <fieldset>
-          <label for="number">Enter a Number:</label><br>
+          <label for="number">Write a Number:</label><br>
           <input type="number" id="number" required="">
-          <button type="button" id="convert-btn">Convert</button>
+          <button type="submit" id="convert-btn">Convert number</button>
         </fieldset>
       </form>
       <div id="output" class="output" hidden></div>
