cash register done

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             Certification projects:
         </h2>
       <ul>
+        <li><a href="./certification-projects/cash-register/">Cash register</a></li>
+        <li>
         <li><a href="./certification-projects/palindrome-checker">Palindrome checker</a></li>
         <li>
           <a href="./certification-projects/roman-numeral-converter">Roman numeral converter</a>
