--- a/certification-projects/cash-register/index.html
+++ b/certification-projects/cash-register/index.html
@@ -10,7 +10,7 @@
     <main>
       <div class="main-container">
       <h1>Cash Register Project</h1>
-      <div id="change-due"></div>
+      <div id="change-due">Waiting...</div>
       <div class="input-div">
         <label for="cash">Enter cash from customer:</label>
         <input type="number" id="cash" class="user-input" value="" />
@@ -20,7 +20,23 @@
         <div class="top-display-screen-container">
           <p id="price-screen" class="price-screen"></p>
         </div>
+        <div class="block" ></div>
         <div class="top-register">
+          <div class="cash-drawer-buttons">
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+
+          </div>
           <div id="cash-drawer-display" class="cash-drawer-display">
             <p><strong>Change in drawer:</strong></p>
             <div id="cidContainer" class="cash-cid-container"></div>
