--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <li>
           <a href="./certification-projects/telephone-number-validator">Telephone number validator</a>
         </li>
+        <li>
+          <a href="./certification-projects/pokemon-search-app">Pokémon Search App</a>
+        </li>
       </ul>
     </div>
   </section>
