--- a/index.html
+++ b/index.html
@@ -4,47 +4,71 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <title>JSADS</title>
   </head>
   <body>
     <header>
       <div class="header-container container">
-        <h1>JavaScript Algorithms and Data Structures (Beta) Certification</h1>
+        <h1>JavaScript Algorithms and Data Structures (Beta) Certification - <span>freeCodeCamp(<i class="fa-solid fa-fire-flame-curved"></i>)</span></h1>
       </div>
     </header>
     <main>
       <section>
         <div class="section-container container">
-            <h2 class="section-title">
-                Course projects:
-            </h2>
+          <h2 class="section-title">Certification projects:</h2>
           <ul>
-            <li><a href="./course-projects/calorie-counter">Calorie counter</a></li>
-            <li><a href="./course-projects/music-player">Music player</a></li>
-            <li><a href="./course-projects/role-playing-game">Role playing game</a></li>
+            <li>
+              <a href="./certification-projects/cash-register/"
+                ><i class="fa-solid fa-cash-register"></i> Cash register</a
+              >
+            </li>
+            <li></li>
+            <li>
+              <a href="./certification-projects/palindrome-checker"
+                ><i class="fa-solid fa-circle-check"></i>Palindrome checker</a
+              >
+            </li>
+            <li>
+              <a href="./certification-projects/roman-numeral-converter"
+                ><i class="fa-solid fa-i"></i>Roman numeral converter</a
+              >
+            </li>
+            <li>
+              <a href="./certification-projects/telephone-number-validator"
+                ><i class="fa-solid fa-square-phone"></i>Telephone number validator</a
+              >
+            </li>
+            <li>
+              <a href="./certification-projects/pokemon-search-app"
+                ><i class="fa-solid fa-magnifying-glass"></i>Pokémon Search App</a
+              >
+            </li>
           </ul>
         </div>
       </section>
-      <div class="section-container container">
-        <h2 class="section-title">
-            Certification projects:
-        </h2>
-      <ul>
-        <li><a href="./certification-projects/cash-register/">Cash register</a></li>
-        <li>
-        <li><a href="./certification-projects/palindrome-checker">Palindrome checker</a></li>
-        <li>
-          <a href="./certification-projects/roman-numeral-converter">Roman numeral converter</a>
-        </li>
-        <li>
-          <a href="./certification-projects/telephone-number-validator">Telephone number validator</a>
-        </li>
-        <li>
-          <a href="./certification-projects/pokemon-search-app">Pokémon Search App</a>
-        </li>
-      </ul>
-    </div>
-  </section>
+      <section>
+        <div class="section-container container">
+          <h2 class="section-title">Course projects:</h2>
+          <ul>
+            <li>
+              <a href="./course-projects/calorie-counter"><i class="fa-solid fa-calculator"></i>Calorie counter</a>
+            </li>
+            <li><a href="./course-projects/music-player"><i class="fa-solid fa-music"></i>Music player</a></li>
+            <li>
+              <a href="./course-projects/role-playing-game"
+                ><i class="fa-solid fa-gamepad"></i>Role playing game</a
+              >
+            </li>
+          </ul>
+        </div>
+      </section>
+      
     </main>
+    <footer class="footer">
+      <div class="container">
+        <p> &copy; 2024 - Esteban Carrillo. All rigths reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
